--- a/dev/scss/_includes/separate/main.scss
+++ b/dev/scss/_includes/separate/main.scss
@@ -123,6 +123,7 @@
     padding: 0 20px;
     &__block {
       width: 100%;
+      text-align: center;
     }
     &__name {
       display: inline-flex;
@@ -687,13 +688,15 @@
     height: 240px;
   }
   .scroll-to {
-    display: block;
-    padding: 50px 0;
     position: relative;
     width: 100%;
     top: 0;
     left: 0;
-    text-align: center;
+    bottom: 0;
+    right: 0;
+    min-height: 120px;
+    align-items: center;
+    justify-content: center;
   }
   .scroll-to__text {
     display: block;
@@ -711,6 +714,9 @@
     -moz-border-radius: 50%;
     border-radius: 50%;
     transform: translate(-50%, -50%);
+  }
+  .scroll-to__arrow__link {
+    max-width: 17px;
   }
   .scroll-to__arrow__icon {
     max-width: 17px;
