adaptive has been finished

--- a/dev/scss/_includes/libs/animate/_base.scss
+++ b/dev/scss/_includes/libs/animate/_base.scss
@@ -133,3 +133,25 @@
 .animated.bounceOut {
 	animation-duration: .75s;
 }
+
+// scale X
+
+@keyframes moveX {
+	0% {
+		-webkit-transform: translateX(100%);
+		transform: translateX(100%);
+	}
+	25% {
+		-webkit-transform: translateX(0%);
+		transform: translateX(0%);
+	}
+	50% {
+		-webkit-transform: translateX(100%);
+		transform: translateX(100%);
+	}
+	100% {
+		-webkit-transform: translateX(0%);
+		transform: translateX(0%);
+	}
+}
+
