--- a/dev/templates/_includes/components/header-page/header-page.jade
+++ b/dev/templates/_includes/components/header-page/header-page.jade
@@ -6,9 +6,9 @@ mixin header-page()
 
       nav.menu
         button.menu__btn.js-navBtn
-          span.menu__btn__line.menu__btn__line--black
-          span.menu__btn__line.menu__btn__line--black
-          span.menu__btn__line.menu__btn__line--small.menu__btn__line--black
+          span.menu__btn__line.menu__btn__line--black.animated
+          span.menu__btn__line.menu__btn__line--black.animated
+          span.menu__btn__line.menu__btn__line--small.menu__btn__line--black.animated
         div.menu__main.js-navMenu
           a.logo__menu(href='/')
             img.logo__menu__img(src='s/images/icon-logo.png' alt='logo')
