--- a/dev/templates/_includes/components/header/header.jade
+++ b/dev/templates/_includes/components/header/header.jade
@@ -14,9 +14,9 @@ mixin header()
             span.contact__phone__numb 294.606.660
       nav.menu
         button.menu__btn.js-navBtn
-          span.menu__btn__line
-          span.menu__btn__line
-          span.menu__btn__line.menu__btn__line--small
+          span.menu__btn__line.animated
+          span.menu__btn__line.animated
+          span.menu__btn__line.menu__btn__line--small.animated
         div.menu__main.js-navMenu
           a.logo__menu(href='/')
             img.logo__menu__img(src='s/images/icon-logo.png' alt='logo')
