--- a/dev/templates/_includes/_extends/main.jade
+++ b/dev/templates/_includes/_extends/main.jade
@@ -23,5 +23,6 @@ html(lang='en')
 			+footer()
 
 	script(src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/utils/Draggable.min.js")
+	script(src="//cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js")
 	script(src=route.js + "main.js")
