--- a/dev/templates/_includes/components/header/header.scss
+++ b/dev/templates/_includes/components/header/header.scss
@@ -36,22 +36,121 @@
     justify-content: center;
     &__btn {
       display: inline-block;
-      width: 35px;
-      padding: 3px;
+      width: 30px;
+      margin: 3px;
+      overflow: hidden;
       &__line {
         display: block;
         background-color: #d64743;
         height: 4px;
         border-radius: 3px;
         margin: 3px 0;
+        animation-delay: 0s;
+        &:nth-child(2) {
+          animation-delay: .3s;
+        }
         &--small {
           width: 60%;
           margin-right: 0;
           margin-left: auto;
+          animation-delay: .6s;
         }
         &--black {
           background-color: #000
         }
+      }
+      &:hover {
+        .menu__btn__line {
+          animation-name: moveX;
+        }
+      }
+    }
+    &__main {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      padding-top: 30px;
+      z-index: 10;
+      transition: .3s ease;
+      text-align: center;
+      transform: translateX(100%);
+      background: linear-gradient(to bottom left, #D0ADAA, #d5d8da);
+      &.is-active {
+        transform: translateX(0);
+      }
+    }
+    &__list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 30px;
+    }
+    &__item {
+      margin: 10px 0;
+    }
+    &__link {
+      font-size: 30px;
+      color: #fff;
+      line-height: 40px;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-family: "Myriad Pro", sans-serif;
+      letter-spacing: 5px;
+      transition: .3s linear;
+      &:hover {
+        color: #d23525;
+      }
+    }
+    &__close {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 35px;
+      height: 35px;
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      background: none;
+
+      &__line {
+        display: inline-block;
+        height: 3px;
+        width: 35px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        transform: rotate(45deg);
+        background-color: #fff;
+        position: relative;
+        transition: .3s ease;
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          display: inline-block;
+          height: 3px;
+          width: 35px;
+          -webkit-border-radius: 5px;
+          -moz-border-radius: 5px;
+          border-radius: 5px;
+          transform: rotate(90deg);
+          background-color: #fff;
+          transition: .3s ease;
+        }
+      }
+      &:hover {
+        .menu__close__line,
+        .menu__close__line::before {
+          background-color: #D12E2E;
+          transform: rotate(90deg);
+          transform-origin: center;
+        }
+
       }
     }
   }
@@ -62,13 +161,19 @@
       font-weight: bold;
       text-align: left;
       color: #1b1613;
+      transition: .3s ease;
       &__icon {
         display: inline-block;
         max-width: 40px;
         margin-right: 15px;
         margin-bottom: -3px;
       }
+      &:hover {
+        color: #D12E2E;
+      }
     }
   }
 }
+
+
 
